--- a/app/src/main/res/layout/activity_create_card.xml
+++ b/app/src/main/res/layout/activity_create_card.xml
@@ -26,8 +26,8 @@
         android:layout_marginTop="30dp"
         android:padding="15dp"
         android:background="@drawable/custom_edittetext"
-        android:textColorHint="#BFBBBB"
-        android:textColor="@color/white"
+        android:textColorHint="@color/teal_700"
+        android:textColor="@color/teal_700"
         />
 
     <EditText
@@ -38,8 +38,8 @@
         android:hint="Priority"
         android:padding="15dp"
         android:background="@drawable/custom_edittetext"
-        android:textColorHint="#BFBBBB"
-        android:textColor="@color/white"
+        android:textColorHint="@color/teal_700"
+        android:textColor="@color/teal_700"
         />
 
     <Button
@@ -47,6 +47,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:backgroundTint="@color/teal_700"
         android:text="Save"/>
 
 </LinearLayout>
