--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,6 +8,12 @@
     android:gravity="center_vertical"
     android:layout_height="match_parent"
     tools:context=".SplashScreen">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="162dp"
+        tools:srcCompat="@drawable/icon" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,4 +34,6 @@
         android:textSize="16sp"
         android:letterSpacing="0.3"
         android:fontFamily="sans-serif"/>
+
+
 </LinearLayout>
